syntax = "proto3";
package lumnetwork.millions;

import "gogoproto/gogo.proto";

import "lumnetwork/millions/prize_batch.proto";

option go_package = "github.com/lum-network/chain/x/millions/types";

message PrizeStrategy {
  repeated PrizeBatch prize_batches = 1 [ (gogoproto.nullable) = false ];
}
